# ProductService

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  scripts.py
alembic/: env.py
alembic/versions/: 2a09bf88961a_add_table_relationships_for_product.py  2b500bac0544_fix_product_image_title_prefix_length.py  5ce84252a51b_add_image_prefix_for_product.py  5dcc3035dedb_fix_image_product_image_title_prefix.py  64f432430d9d_separation_product_attr_for_other_tables.py  7a92f477a4df_add_datetime_field_to_product.py  8080df701cae_first_init.py  9fce76ba31fc_fix_product_image_title_prefix_length.py
redis_data/: dump.rdb
src/: main.py  test.py
src/app/entrypoints/: dependencies.py  routes.py
src/app/events/: subscribe.py
src/app/exceptions/: constants.py  exceptions.py  models.py  registrar.py  registrator.py
src/app/services/: service.py
src/app/use_cases/: product_use_case.py
src/core/database/: connection.py
src/core/interfaces/: brokers.py  exceptions.py  models.py  repositories.py  storages.py  units_of_work.py
src/core/redis/: connection.py
src/core/settings/: settings.py
src/infra/clients/: storages.py
src/infra/entrypoints/: dependencies.py
src/infra/events/: subscribers.py
src/infra/interfaces/: storages.py
src/products/adapters/: models.py
src/products/entrypoints/: dependencies.py
src/products/events/: create_user_event.py
src/products/exceptions/: constants.py  exceptions.py
src/products/interfaces/: repositories.py  units_of_work.py
src/products/services/: service.py  units_of_work.py
(+31 files in other folders)
