[project]
name = "productservice"
version = "0.1.0"
description = ""
authors = [
    { name = "XaBa YaBa", email = "achapovskimaxim@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "faststream (>=0.5.43,<0.6.0)",
    "aiobotocore (>=2.23.0,<3.0.0)",
    "types-aiobotocore-s3 (>=2.23.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "types-aiobotocore[s3] (>=2.23.0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "python-ulid (>=3.0.0,<4.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
    "grpcio-tools (>=1.74.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{ include = "src" }]


[tool.poetry.scripts]
project = "scripts:run_project"
